--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -4,6 +4,7 @@ body {
   font-size: 16px;
   color: #404040;
   overflow-x: hidden;
+  background-color: #00FF7F;
 }
 p {
   margin: 30px 0;
@@ -26,7 +27,7 @@ h4 {
   font-size: 18px;
 }
 a {
-  color: #404040;
+  color: #00bea0;
 }
 a:hover,
 a:focus {
