set body background-color

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -4,7 +4,7 @@ body {
   font-size: 16px;
   color: #404040;
   overflow-x: hidden;
-  background-color: #00FF7F;
+  background-color: #F0FFF0;
 }
 p {
   margin: 30px 0;
