--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -27,7 +27,7 @@ h4 {
   font-size: 18px;
 }
 a {
-  color: #00bea0;
+  color: #00b091;
 }
 a:hover,
 a:focus {
@@ -76,7 +76,7 @@ hr.small {
   }
 }
 .post-container a {
-  color: #2B4180;
+  color: #337ab7;
 }
 .post-container a:hover,
 .post-container a:focus {
