set anchor icon: &uArr; cancel [place left on bigger screen]

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -137,11 +137,12 @@ var duoshuoQuery = {short_name:"cnfeat"};
         anchors.options = {
           visible: 'always',
           placement: 'right',
-          icon: '#'
+          icon: '&uArr;'
         };
         anchors.add().remove('.intro-header h1').remove('.subheading');
     })
 </script>
+<!--
 <style>
     /* place left on bigger screen */
     @media all and (min-width: 800px) {
@@ -152,4 +153,4 @@ var duoshuoQuery = {short_name:"cnfeat"};
             margin-top : -0.1em;
         }
     }
-</style>
+</style>-->
