add back-top to post.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -221,3 +221,10 @@ var duoshuoQuery = {short_name:"cnfeat"};
 	background-color: #c0c0c0;
 }
 </style>
+
+<link rel="stylesheet" href="/css/backtop.css">  <!-- Back Top -->
+<script type="text/javascript" src="/js/backtop.js"></script>  <!-- Back Top -->
+
+<div id="back-top">
+  <a href="#top" title="回到顶部"></a>
+</div>
