--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -137,7 +137,7 @@ var duoshuoQuery = {short_name:"cnfeat"};
         anchors.options = {
           visible: 'always',
           placement: 'right',
-          icon: '&uArr;'
+          icon: '&#128279;'
         };
         anchors.add().remove('.intro-header h1').remove('.subheading');
     })
