--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -131,13 +131,13 @@ var duoshuoQuery = {short_name:"cnfeat"};
     }
 </script>
 
-<!-- anchor-js, Doc:http://bryanbraun.github.io/anchorjs/ -->
+<!-- anchor-js, Doc:http://bryanbraun.github.io/anchorjs/    icon: '&#128279;'-->
 <script>
     async("http://cdn.bootcss.com/anchor-js/1.1.1/anchor.min.js",function(){
         anchors.options = {
           visible: 'always',
           placement: 'right',
-          icon: '&#128279;'
+          icon:
         };
         anchors.add().remove('.intro-header h1').remove('.subheading');
     })
